fix broken stylesheets

--- a/app/assets/stylesheets/eightythousand.scss
+++ b/app/assets/stylesheets/eightythousand.scss
@@ -153,6 +153,9 @@ a.fp-splash-find-out-more {
     color: #fdd;
   }
 
+}
+
+.btn-giant {
   font-size: 200%;	
   padding: 18px 20px 12px 20px;
 }
